<resources>
    <string name="app_name">PegCityTransit</string>

    <!--    Keys, default values, etc.  -->
    <string name="api_base_url">https://api.winnipegtransit.com/v2/</string>

    <!--    There are no doubles/float resource files that we can use, so we'll hack around that with this. -->
    <string name="downtown_winnipeg_latitude">49.895157</string>
    <string name="downtown_winnipeg_longitude">-97.139280</string>

    <!--    Date format used "yyyy-MM-dd'T'HH:mm:ss" Example: "2016-12-19T16:37:35" -->
    <string name="date_format">yyyy-MM-dd\'T\'HH:mm:ss</string>

    <!--    Font Path   -->
    <string name="default_font_path">fonts/bariol_regular.ttf</string>

    <!--    URLs    -->
    <string name="search_stops_url">https://api.winnipegtransit.com/v2/stops:{query}.json</string>

    <!--    Permissions    -->
    <string name="location_permission_rationale">This app uses location services to find bus stops near your location. If the permission has been permanently denied, it can be enabled from System Settings &gt; Apps &gt; \'PegCityTransit\'.</string>

    <!-- Bottom Tabs -->
    <string name="search_stops">Search Stops</string>
    <string name="my_stops">My Stops</string>
    <string name="routes">Routes</string>
    <string name="settings">Settings</string>

    <!--    UI Labels   -->
    <string name="stop_search_hint">Search stops by street, number, or landmark</string>
    <string name="bus_route_empty_state">Tap here to select a bus route</string>
    <string name="select_a_bus_route">{md-directions-bus} Select a Bus Route</string>
    <string name="settings_toolbar_title">{md-settings} Settings</string>
    <string name="departs_in">Departs in {time} {time_unit}</string>
    <string name="due">Due</string>
    <string name="checked_at">Schedule (Checked at {time})</string>
    <string name="filter_by_route">Filter by Route</string>
    <string name="schedule">Schedule</string>

    <string name="on_time">On Time</string>
    <string name="late">Late</string>
    <string name="early">Early</string>

    <plurals name="minutes">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>

    <string name="loading_message_finding_routes">Finding Routes&#8230;</string>
    <string name="loading_message_finding_schedule">Finding Schedule&#8230;</string>

    <string name="use_24_hour_time">Use 24-hour time</string>
    <string name="bus_stop_schedules">Bus Stop Schedules</string>
    <string name="map">Map</string>
    <string name="search_radius">Search Radius (meters)</string>
    <string name="report_issue_blurb">Notice an issue with the app? Send a bug report so it can be looked into (please be as descriptive as possible).</string>
    <string name="report_issue">Report an Issue</string>
    <string name="rate_blurb">Love it? Hate it? Rate it!</string>
    <string name="rate_app">Rate the App!</string>

    <string name="feedback_email">pegcitytransit@gmail.com</string>
    <string name="feedback_email_subject">App Issue</string>

    <string-array name="map_search_radius">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
    </string-array>

    <!-- Cache keys -->
    <string name="cache_key_all_routes">ALL_ROUTES</string>
    <string name="cache_key_stops_for_route">STOPS_FOR_{route}</string>
    <string name="cache_key_routes_at_stop">ROUTES_AT_{stop}</string>

    <!-- Error states -->
    <string name="generic_error">Sorry. An error occurred.</string>
    <string name="error_loading_bus_stops">Sorry. An error occurred while loading the bus stops in that area.</string>
    <string name="error_loading_bus_routes">Sorry. An error occurred while loading the bus routes.</string>
    <string name="error_searching_for_bus_stops">Sorry. An error occurred while searching for bus stops.</string>
    <string name="error_loading_route">Sorry. An error occurred while loading bus route #{route}.</string>
    <string name="error_loading_schedule">Sorry. An error occurred while loading the schedule for that bus stop.</string>
    <string name="error_finding_location">Sorry. Unable to find your location.</string>
    <string name="error_loading_saved_stops">Sorry. An error occurred loading your saved bus stops.</string>
    <string name="error_google_play_services_missing">Sorry. You need Google Play Services installed to use this app.</string>

    <string name="no_bus_stops_in_that_area">Sorry. There are no bus stops in that area.</string>
    <string name="no_saved_stops">You don\'t seem to have any saved stops yet.</string>
    <string name="no_schedule">No buses are scheduled to stop here at this time.</string>
    <string name="no_search_results">Sorry. Could not find any stops with the search query \"{query}\".</string>

    <string name="warning">Warning!</string>
    <string name="service_advisory_warning">Winnipeg Transit is reporting that code {code} priority service is currently in effect. Schedules may not be reliable at this time.</string>

    <string name="try_again">Try Again</string>

</resources>
