<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentInsetEnd="@dimen/material_spacing_medium"
            app:contentInsetLeft="@dimen/material_spacing_medium"
            app:contentInsetRight="@dimen/material_spacing_medium"
            app:contentInsetStart="@dimen/material_spacing_medium">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <!-- Close button -->
                <com.joanzapata.iconify.widget.IconButton
                    android:id="@+id/toolbar_close_button"
                    style="@style/toolbar_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="{md-close}"/>

                <com.joanzapata.iconify.widget.IconTextView
                    style="@style/toolbar_title"
                    fontPath="fonts/bariol_bold.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/material_spacing_medium"
                    android:layout_marginLeft="@dimen/material_spacing_medium"
                    android:layout_marginRight="@dimen/material_spacing_medium"
                    android:layout_marginStart="@dimen/material_spacing_medium"
                    android:layout_toEndOf="@id/bottom_sheet_toolbar_close_button"
                    android:layout_toRightOf="@id/bottom_sheet_toolbar_close_button"
                    android:text="@string/settings_toolbar_title"/>

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/material_spacing_small"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <RelativeLayout
                    style="@style/settings_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        fontPath="fonts/bariol_bold.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:text="@string/use_24_hour_time"
                        android:textSize="@dimen/text_medium"/>

                    <Switch
                        android:id="@+id/use_24_hour_time_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_spacing_small"
                android:layout_marginLeft="@dimen/material_spacing_small"
                android:layout_marginRight="@dimen/material_spacing_small"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <LinearLayout
                    style="@style/settings_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/report_issue_blurb"
                        android:textSize="@dimen/text_medium"/>

                    <Button
                        style="@style/button"
                        fontPath="fonts/bariol_bold.ttf"
                        android:id="@+id/report_issue_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/material_spacing_small"
                        android:text="@string/report_issue"
                        android:textSize="@dimen/text_medium"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_spacing_small"
                android:layout_marginLeft="@dimen/material_spacing_small"
                android:layout_marginRight="@dimen/material_spacing_small"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <LinearLayout
                    style="@style/settings_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_blurb"
                        android:textSize="@dimen/text_medium"/>

                    <Button
                        style="@style/button"
                        fontPath="fonts/bariol_bold.ttf"
                        android:id="@+id/rate_app_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/material_spacing_small"
                        android:text="@string/rate_app"
                        android:textSize="@dimen/text_medium"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>